--- a/www/mkcx/s.html
+++ b/www/mkcx/s.html
@@ -21,7 +21,7 @@ iframe {
 <iframe id="content"></iframe>
 <script>
 window.addEventListener('load', function() {
-    document.getElementById('myIframe').src = 'https://mkcx.cn/s/' + location.hash.substring(1);
+    document.getElementById('content').src = 'https://mkcx.cn/s/' + location.hash.substring(1);
 });
 </script>
 </body>
